src/components/css/wedding-design.css
/**
 * WEDDING DESIGN.CSS
 */
#content-slider {
  display: flex;
  align-items: center;
  justify-content: center;
  flex-wrap: wrap;
  width: inherit;
  position: relative;
  height: 500px;
}
#content-slider > div {
  position: absolute;
  inset: 0;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: space-between;
  text-align: center;
  opacity: 0;
  transition: all .1s ease-in-out;
}
#content-slider > div.fade-in {
  opacity: 1;
}
/* dark screen for background pic */
#content-slider > div::before {
  position:absolute;
  inset: 0;
  content: ' ';
  background-color: var(--secondary);
  background-blend-mode: multiply;
  opacity: .25;
  z-index: 0;
}
#content-slider > div > p {
  background: var(--secondary);
  color: var(--primary);
  padding: 12px 25px 5px 25px;
  line-height: auto;
  z-index: 10;
}
#content-slider > div > span {
  width: 350px;
  background: var(--primary);
  margin: 30px;
  padding: 30px;
  font-size: 1.15rem;
  text-align: justify;
  align-self:flex-start;
  z-index: 10;
}
/* MOBILE < 500
________________________________________________________ */
@media only screen and (max-width: 500px) {
  #content-slider {
    height: 600px;
    width: 99%;
  }
  #content-slider > div > span {
    width: inherit;
    margin: 10px;
    padding: 20px;
  }
}

